--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,24 @@ dependencies {
     implementation ('io.socket:socket.io-client:1.0.0') {
         exclude group: 'org.json', module: 'json'
     }
+
+
+
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
+
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+
+
+
+
+
+
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
 }
 
